--- a/css/styles.css
+++ b/css/styles.css
@@ -346,6 +346,13 @@ p {
   color: rgba(255, 255, 255, 0.6);
   outline: transparent;
 }
+.footer-form-input::placeholder {
+  font-size: 16px;
+  line-height: calc(20 / 16);
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
 .footer-form-input:hover,
 .footer-form-input:focus {
   border: 1px solid var(--accent-color);
@@ -868,6 +875,7 @@ p {
 }
 
 .form-input {
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -875,7 +883,13 @@ p {
   padding-left: 42px;
   outline: transparent;
 }
-
+.form-input:focus,
+.form-text:focus {
+  border: 1px solid var(--accent-color);
+}
+.form-input:focus + .form-icon {
+  fill: var(--accent-color);
+}
 .form-fied-text {
   font-size: 12px;
   line-height: calc(14 / 12);
@@ -891,44 +905,49 @@ p {
   position: relative;
 }
 .form-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: absolute;
-  width: 18px;
-  height: 18px;
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
+  fill: var(--primary-black-color);
 }
 
 .form-text {
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
   height: 120px;
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
-
+  outline: transparent;
+}
+.form-text::placeholder {
   font-size: 14px;
   line-height: calc(16 / 14);
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-.form-text::placeholder {
-  font-size: 14px;
-}
 .check-text {
   display: flex;
-  position: relative;
-  display: block;
+  justify-content: center;
+  align-items: center;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   margin-bottom: 30px;
 }
+.polisy-link {
+  color: var(--accent-color);
+  margin-left: 3px;
+  text-decoration: underline;
+}
 .check-item {
   width: 16px;
   height: 15px;
-  border: 2px solid #000000;
+  border: 2px solid var(--primary-black-color);
   border-radius: 3px;
   margin-right: 5px;
   display: flex;
@@ -941,7 +960,6 @@ p {
 .form-checkbox:checked + .check-text > .check-item {
   background-color: var(--accent-color);
   border-color: transparent;
-  /* fill: var(--primary-white-color); */
 }
 
 .btn-form-send {
